Closed Bug 869332 Opened 13 years ago Closed 13 years ago

[Bluetooth][Certification]TC_AG_ICR_BV_01_I failed due to CIEV missing after call rejected

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(blocking-b2g:tef+, firefox21 wontfix, firefox22 wontfix, firefox23 fixed, b2g18 fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 fixed)

RESOLVED FIXED
blocking-b2g tef+
Tracking Status
firefox21 --- wontfix
firefox22 --- wontfix
firefox23 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- fixed

People

(Reporter: shawnjohnjr, Assigned: echou)

References

Details

(Whiteboard: [fixed-in-birch] QARegressExclude)

Attachments

(1 file)

RING +CLIP: "xxxxxx", 129 AT+CHUP OK We shall expect there will be AT commands "+CIEV:4,0" here. This test based on gecko m-c and gaia:master I used to test before 3 months before, it works fine. Not sure it's related to ril interface. Somehow, we need to follow up this problem. Found similar pattern in Bug 868963.
I will test v.1.0.1 again see if problem also exist
Assignee: nobody → shuang
steal!
Assignee: shuang → echou
When we reject an incoming call, CallStateChanged events would be fired in a series: Incoming => Busy => Disconnected Since "Busy" is an intermediate state and it lasts only fof a very short pefiod of time, we should ignore this state and do nothing until the next CallStateChange event coming. However, in current BluetoothHfpManager.cpp, we reset call status (sCINDItems, maintaining Call/CallSetup/CallHeld indicators) while receiving unhandled events. It's not an appropriate way to deal with this kind of events, so I removed it.
Attachment #746756 - Flags: review?(gyeh)
Nominate as tef+ since it blocks Bluetooth certification.
blocking-b2g: --- → tef?
(In reply to Shawn Huang from comment #1) > I will test v.1.0.1 again see if problem also exist Confirmed problem now also happened v1.0.1
blocking-b2g: tef? → tef+
Comment on attachment 746756 [details] [diff] [review] patch 1: v1: fix the problem Review of attachment 746756 [details] [diff] [review]: ----------------------------------------------------------------- Great! We shouldn't reset CIND values for unhandled call state change.
Attachment #746756 - Flags: review?(gyeh) → review+
Whiteboard: [fixed-in-birch]
Blocks: 868963
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Unable to verify. Lack of resources. Need Bluetooth PTS tool to verify. Marking as QARegressExclude.
Whiteboard: [fixed-in-birch] → [fixed-in-birch] QARegressExclude
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: