Bug 869332 - Don't reset call status while receiving an unhandled CallStateChanged event. r=gyeh, a=tef+